<?xml version="1.0"?>
<package format="3">
  <name>command_server_interfaces</name>
  <version>0.0.1</version>
  <description>Interfaces (srv) for the command server.</description>

  <maintainer email="user@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


