<?xml version="1.0"?>
<package format="3">
  <name>command_server_pkg</name>
  <version>0.0.1</version>
  <description>Command server node providing /compute_command service.</description>

  <maintainer email="user@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>builtin_interfaces</depend>
  <depend>command_server_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


