<?xml version="1.0"?>
<package format="3">
  <name>my_project</name>
  <version>0.0.1</version>
  <description>Launch package for ROS 2 Humble assignment.</description>

  <maintainer email="user@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


