<?xml version="1.0"?>
<package format="3">
  <name>sensor_publisher_pkg</name>
  <version>0.0.1</version>
  <description>Fake sensor publisher node for ROS 2 Humble assignment.</description>

  <maintainer email="user@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


